spacing was an issue with some images https://github.com/Strategy11/BusinessDirectoryPlugin/issues/4751

--- a/themes/default/assets/styles.css
+++ b/themes/default/assets/styles.css
@@ -22,6 +22,11 @@
 
 .wpbdp-listing .listing-thumbnail {
 	float: left;
+	width: 150px;
+}
+
+.wpbdp-listing .listing-thumbnail img {
+	max-width: 150px;
 }
 
 .wpbdp-listing .listing-details {
